<resources>
    <string name="app_name">DoneIt</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Please enter your Name</string>
    <string name="enter_email">Please enter your Email</string>
    <string name="enter_password">Please enter your Password</string>
    <string name="invalid_login">Invalid login, please try again</string>
    <string name="invalid_email">Email is invalid, please try again</string>
    <string name="invalid_password">Password is invalid, please try again</string>
    <string name="welcome_label">Welcome to Todo</string>
    <string name="login_label">Login to Todo</string>
    <string name="register_label">Join Todo</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_task">New Task</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="welcome_to_doneit">Welcome to DoneIt</string>
    <string name="please_login_to_continue">Please Login to continue</string>
    <string name="doneit">DONEIT</string>
    <string name="reglog">REGLOG</string>
    <string name="list">LIST</string>
    <string-array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>